fixed wrong font with game mode card start button.

--- a/frontend/src/app/components/gameModeCard.module.css
+++ b/frontend/src/app/components/gameModeCard.module.css
@@ -130,6 +130,7 @@
 }
 
 .startButton {
+    font-family: var(--font-silkscreen);
     width: 100%;
     height: var(--button-height, 120px);
     position: relative;
